--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "dependencies": {
     "jenkins": "^0.22.1",
     "prompt": "^1.0.0"
+  },
+  "devDependencies": {
+    "husky": "^1.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "node build.js"
+    }
   }
 }
